# AI_Novel_Studio

./: .gitignore  LICENSE  LOGGING.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  fix_all_db_paths.py  fix_commands.py  fix_commands2.py  fix_db_paths_v2.py  tauri.conf.json
src-tauri/src/: character_dialogue.rs  character_dialogue_commands.rs  character_growth.rs  character_growth_commands.rs  character_tags.rs  cloud_sync_commands.rs  collaboration.rs  collaboration_commands.rs  commands.rs  database.rs  lib.rs  logger.rs  main.rs  models.rs  multimedia_generation_commands.rs  plugin_commands.rs  plugin_marketplace_commands.rs  prompt_template_commands.rs  text_analysis.rs  text_analysis_commands.rs  version_control.rs  version_control_commands.rs  writing_tools.rs  writing_tools_commands.rs
src-tauri/src/ai/: batch_production.rs  bigmodel_adapter.rs  character_bible.rs  comfyui_client.rs  generators.rs  mod.rs  models.rs  ollama_adapter.rs  openai_adapter.rs  prompt_compiler.rs  prompt_manager.rs  scene_manager.rs  script_parser.rs  seedance_2_0.rs  service.rs  storyboard_system.rs  task_poller.rs  task_queue.rs  traits.rs  workflow_templates.rs
src-tauri/src/cloud_sync/: mod.rs
src-tauri/src/export/: docx_export.rs  epub_export.rs  md_export.rs  mod.rs  (+2 more)
src-tauri/tests/: ai_test.rs  commands_test.rs  project_tests.rs
(+149 files in other folders)
