[package]
name = "ai-novel-studio"
version = "0.1.0"
description = "AI小说创作工作室"
authors = ["AI Novel Studio Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"
genpdf = "0.2"
epub-builder = "0.7"
semver = "1.0"
log = "0.4"
rquickjs = "0.5"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
rlua = "0.19"
urlencoding = "2.1"
zip = "2.2"
quick-xml = "0.37"
regex = "1.10"
base64 = "0.22"

[dev-dependencies]
tauri-cli = { version = "2.0", features = [] }
tempfile = "3.12"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
mockall = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
